plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.jlink' version '3.0.1'
}

group 'fr.univ_amu.m1info.board_game_library'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

ext {
    junitVersion = '5.10.2'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.withType(Test).configureEach {
    systemProperty "file.encoding", "UTF-8"
}

sourceSets {
    test {
        java {
            srcDirs = ['src/test/java']
        }
        resources {
            srcDirs = ['src/test/resources']
        }
    }
}

application {
    mainModule = 'fr.univ_amu.m1info.board_game_library'
    mainClass = 'fr.univ_amu.m1info.board_game_library.OthelloApplication'
}

javafx {
    version = '22.0.1'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    implementation 'org.openjfx:javafx-controls:22.0.1'
    implementation 'org.openjfx:javafx-fxml:22.0.1'

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

}

test {
    useJUnitPlatform()
    jvmArgs += [
            '--add-modules', 'org.junit.jupiter.api',   // Utiliser les modules JUnit dans les tests
            '--add-reads', 'fr.univ_amu.m1info.board_game_library=org.junit.jupiter.api'
    ]
    testLogging {
        events "passed", "skipped", "failed"
    }
}

jlink {
    imageZip = project.file("${rootProject.layout.buildDirectory}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}
